<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculate">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:src="@drawable/logo"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:id="@+id/rent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_options"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="20dip"/>



        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip">


                <EditText
                    android:id="@+id/pxname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Property name "
                    android:imeActionId="6"
                    android:imeActionLabel="Property name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:id="@+id/key">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key_points"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="3">
                    <Spinner
                        android:id="@+id/bhk"
                       android:layout_gravity="fill"
                        android:layout_row="0"
                        android:layout_column="1">

                    </Spinner>

                    <Spinner
                        android:id="@+id/lease_type"
                        android:layout_width="176dp"

                        android:layout_column="0"
                        android:layout_gravity="fill"
                        android:layout_row="0">

                    </Spinner>
                    <TextView
                        android:layout_column="0"
                        android:layout_row="1"
                        android:layout_gravity="left"
                        android:text="@string/price_negotiable"/>
                    <Switch
                        android:textOn="@string/yes"
                        android:layout_column="1"
                        android:textOff="@string/no"
                        android:layout_row="1"/>
                    <EditText
                        android:layout_column="0"
                        android:layout_row="2"
                        android:hint="@string/size_of_property"/>

                </GridLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/misc">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/miscellaneous"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_suitable_options"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/gym"
                            android:text="@string/gym"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/internet"
                            android:text="@string/internet"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/club"
                            android:text="@string/club"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/incom"
                            android:text="@string/intercom"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/park"
                            android:text="@string/park"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cpa"
                            android:text="@string/cpa"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/fs"
                            android:text="FS"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lift"
                            android:text="@string/lift"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ac"
                            android:text="@string/ac"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/security"
                            android:text="@string/security"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pool"
                            android:text="@string/pool"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/gp"
                            android:text="GP"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/rwh"
                            android:text="RWH"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sc"
                            android:text="SC"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip">


                <EditText
                    android:id="@+id/pxlocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/extra">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Extras"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/psize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Property Size"
                    android:imeActionId="6"
                    android:imeActionLabel="Property size"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age of property"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/bath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Number of bath rooms"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/cupboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Number of Cupboard"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Direction of face "
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Number of Floor"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:text="Fully Furnished"
                        android:id="@+id/furn1"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:text="Semi Furnished"
                        android:id="@+id/funr2"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:text="Two Wheeler"
                        android:id="@+id/vehicle2"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:text="Four Wheeler"
                        android:id="@+id/vehicle4"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:text="Both two and Four wheeler"
                        android:id="@+id/vehicle6"
                        android:layout_height="wrap_content" />

                </RadioGroup>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calculate"
            android:backgroundTint="@color/colorAccent"
            android:textStyle="bold" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="asasf"
            android:textColor="@color/cardview_light_background"
            android:background="@color/cardview_light_background"/>





    </LinearLayout>

</ScrollView>